--- a/.gitignore
+++ b/.gitignore
@@ -74,7 +74,9 @@ $RECYCLE.BIN/
 /HudPixelExtended.iml
 /HudPixelExtended.ipr
 /HudPixelExtended.iws
-
+/HudPixel.iml
+/HudPixel.ipr
+/HudPixel.iws
 /Server/
 /Website/
 /.idea/
