--- a/src/main/java/eladkay/hudpixel/asm/mixins_config.json
+++ b/src/main/java/eladkay/hudpixel/asm/mixins_config.json
@@ -1,7 +1,7 @@
 {
   "package": "eladkay.hudpixel.asm",
   "mixins": [
-    "MixinRPR"
+    "MixinRPR", "MixinMinecraft", "MixinChunk"
   ],
   "client": [],
   "server": []
